created css style sheet and js file, still trying to get my highlight to work

--- a/index.html
+++ b/index.html
@@ -1,43 +1,29 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 	<head>
-
 		<meta charset="utf-8"/>
-
 		<title>javascript challenge</title>
-
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
 		<link rel="stylesheet" href="./style.css">
-
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-
 		<script src="./script.js"></script>
-
-
-		<title>javascript challenge</title>
-		<script language="javascript">
-			function turnRed() {
-				var changeTextColor = document.getElementById("changeText");
-				changeTextColor.style.color = "red";
-			}
-
-
-		</script>
 	</head>
+
 	<body>
 		<p> Hide when guests come over jump five feet high and sideways when a shadow moves. Weigh eight pounds but take up a full-size bed spit up on light gray carpet instead of adjacent linoleum demand to have some of whatever the human is cooking, then sniff the offering and walk away, yet suddenly go on wild-eyed crazy rampage. Meow and walk away push your water glass on the floor. Meow meow mama cough furball, pet me pet me don't pet me. Decide to want nothing to do with my owner today meow in empty rooms. Annoy kitten brother with poking stares at human while pushing stuff off a table but hide when guests come over attack feet. Who's the baby eat plants, meow, and throw up because i ate plants eat half my food and ask for more.</p>
-		<p> Sleeps on my head flee in terror at cucumber discovered on floor meow all night having their mate disturbing sleeping humans so refuse to drink water except out of someone's glass eat from dog's food hunt anything that moves. Claw at curtains stretch and yawn nibble on tuna ignore human bite human hand. Chew foot pet right here, no not there, here, no fool, right here that other cat smells funny you should really give me all the treats because i smell the best and omg you finally got the right spot and i love you right now i am the best but hiiiiiiiiii feed me now chase the pig around the house scratch yet meow. Knock dish off table head butt cant eat out of my own dish hiss at vacuum cleaner gimme attention gimme attention gimme attention gimme attention gimme attention gimme attention just kidding i don't want it anymore meow bye.</p>
-		<button class="btn btn-primary" onclick="changeFont()">Change font</button>
+
+
+		<div id="keywords">
+	<span>
+		Sleeps on my head flee in terror at cucumber discovered on floor meow all night having their mate disturbing sleeping humans so refuse to drink water except out of someone's glass eat from dog's food hunt anything that moves. Claw at curtains stretch and yawn nibble on tuna ignore human bite human hand. Chew foot pet right here, no not there, here, no fool, right here that other cat smells funny you should really give me all the treats because i smell the best and omg you finally got the right spot and i love you right now i am the best but hiiiiiiiiii feed me now chase the pig around the house scratch yet meow. Knock dish off table head butt cant eat out of my own dish hiss at vacuum cleaner gimme attention gimme attention gimme attention gimme attention gimme attention gimme attention just kidding i don't want it anymore meow bye.</span>
+		</div>
+		<button class="btn btn-primary" onclick="highlight()">Highlight</button>
+
+
 		<p id="changeText"> Scream for no reason at 4 am hiding behind the couch until lured out by a feathery toy ignore the human until she needs to get up, then climb on her lap and sprawl but leave hair everywhere. Flex claws on the human's belly and purr like a lawnmower kitty poochy, the cat was chasing the mouse. Hopped up on catnip sniff catnip and act crazy, step on your keyboard while you're gaming and then turn in a circle poop on grasses. Massacre a bird in the living room and then look like the cutest and most innocent animal on the planet pet me pet me pet me pet me, bite, scratch, why are you petting me but cat cat moo moo lick ears lick paws yet caticus cuteicus. Mrow. Eat half my food and ask for more scream for no reason at 4 am my left donut is missing, as is my right or leave hair on owner's clothes show belly but refuse to drink water except out of someone's glass go into a room to decide you didn't want to be in there anyway. Hide from vacuum cleaner.</p>
-		<button class="btn btn-primary" onclick="turnRed()">Change color
-		</button>
+		<button class="btn btn-primary" onclick="turnRed()">Change color</button>
 	</body>
