finally able to get highlight to highlight all instances of meow in paragraph

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 		<script>
 		function color() {
 			document.getElementById("change").style.color = "yellow";
+		}
 
-			function color2() {
-				document.getElementById("change2").style.color = "green";
-			}
+		function color2() {
+			document.getElementById("change2").style.color = "yellow";
 		}
 		</script>
 		</head>
@@ -26,9 +26,9 @@
 		<p>Sleeps on my head flee in terror at cucumber discovered on floor meow all night having their mate disturbing sleeping humans so refuse to drink water except out of someone's glass eat from dog's food hunt anything that moves. Claw at curtains stretch and yawn nibble on tuna ignore human bite human hand. Chew foot pet right here, no not there, here, no fool, right here that other cat smells funny you should really give me all the treats because i smell the best and omg you finally got the right spot and i love you right now i am the best but hiiiiiiiiii feed me now chase the pig around the house scratch yet meow. Knock dish off table head butt cant eat out of my own dish hiss at vacuum cleaner gimme attention gimme attention gimme attention gimme attention gimme attention gimme attention just kidding i don't want it anymore meow bye. </p>
 
 		<div>
-			<p>Hide when guests come over jump five feet high and sideways when a shadow moves. Weigh eight pounds but take up a full-size bed spit up on light gray carpet instead of adjacent linoleum demand to have some of whatever the human is cooking, then sniff the offering and walk away, yet suddenly go on wild-eyed crazy rampage. <span id="change">Meow</span> and walk away push your water glass on the floor. <span id="change2">Meow meow</span> mama cough furball, pet me pet me don't pet me. Decide to want nothing to do with my owner today meow in empty rooms. Annoy kitten brother with poking stares at human while pushing stuff off a table but hide when guests come over attack feet. Who's the baby eat plants, meow, and throw up because i ate plants eat half my food and ask for more.</p>
+			<p>Hide when guests come over jump five feet high and sideways when a shadow moves. Weigh eight pounds but take up a full-size bed spit up on light gray carpet instead of adjacent linoleum demand to have some of whatever the human is cooking, then sniff the offering and walk away, yet suddenly go on wild-eyed crazy rampage.<span id="change"> Meow</span> and walk away push your water glass on the floor.<span id="change2"> Meow meow </span> mama cough furball, pet me pet me  don't pet me. Decide to want nothing to do with my owner today meow in empty rooms. Annoy kitten brother with poking stares at human while pushing stuff off a table but hide when guests come over attack feet. Who's the baby eat plants, meow, and throw up because i ate plants eat half my food and ask for more.</p>
 		</div>
-		<button class="btn btn-primary" onclick="color()">Highlight</button>
+		<button class="btn btn-primary" onclick="color(); color2()">Highlight</button>
 
 
 
